--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inconigto Mode - V2ray Account Generator</title>
+    <title>ThreeYas - V2ray Account Generator</title>
     <meta name="description" content="Create V2ray accounts with VMESS, VLESS, TROJAN, and SHADOWSOCKS protocols using Cloudflare Workers">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -837,7 +837,7 @@
                 <div class="logo-img">
                     <i class="fas fa-user-secret"></i>
                 </div>
-                <div class="logo-text">Inconigto Mode</div>
+                <div class="logo-text">ThreeYas</div>
             </div>
             
             <button class="mobile-menu-btn" id="mobile-menu-btn">
@@ -846,10 +846,10 @@
             
             <nav id="main-nav">
                 <ul>
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#protocols">Protocols</a></li>
+                    <li><a href="#features">Fitur</a></li>
+                    <li><a href="#protocols">Protokol</a></li>
                     <li><a href="#telegram">Telegram</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#contact">Kontak</a></li>
                 </ul>
             </nav>
         </header>
@@ -859,7 +859,7 @@
                 <div class="profile-img-container">
                     <img src="https://raw.githubusercontent.com/akulelaki696/bg/refs/heads/main/20250106_010158.jpg" alt="Inconigto Mode Profile" class="profile-img">
                 </div>
-                <h1 class="profile-name" data-text="Inconigto Mode">Inconigto Mode</h1>
+                <h1 class="profile-name" data-text="ThreeYas">ThreeYas</h1>
                 <p class="service-description">V2ray Account Generator based on Cloudflare Workers</p>
                 <div class="status-badge">
                     <i class="fas fa-circle"></i> Service Online
